Most of 2.2 on metrics

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -7,7 +7,7 @@ In this section, I will outline the state of low resource languages. First I wil
 
 Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low} and \emph{under-resourced}, and other terms like \emph{threatened} mean when they refer to a language. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied.
 
-In this section, I will generally define these terms: \textit{endangered}, \textit{moribund},  \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and  \textit{constructed} languages; \textit{minority}, \textit{low-resource}, \textit{under-resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This will help inform why I've chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
+In this section, I will generally define these terms: \textit{endangered}, \textit{moribund}, \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and \textit{constructed} languages; \textit{minority}, \textit{low-resource}, \textit{under-resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This will help inform why I've chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
 
 \subsubsection{Endangered, revitalised, and extinct languages}
 
@@ -17,7 +17,7 @@ Endangered languages are normally languages which have a high amount of speakers
 
 \emph{Moribund} languages are languages which are critically endangered, in that there are no children currently learning the language and using it frequently, although there are speakers. Ainu is a good example, with roughly ten native speakers still living, all of whom are over 80 years old, \footnote{\href{https://www.ethnologue.com/language/ain}{https://www.ethnologue.com/language/ain}} although there are some struggling efforts to revive it \citep{hanks2017policy}. On the other side of the northern Pacific, Haida has a similar amount of native speakers, but because of the amount of immersion programs, government-funded schools, and new venues for the language such as a motion picture filmed entirely in Haida with ethnically Haida actors who learned their lines from the elders, \footnote{\href{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}} it is not considered moribund.
 
-\emph{Dormant} or \textit{sleeping} languages are a stage beyond moribund languages. They have no living fluent speakers. This does not mean that the language is extinct. An example would be Mutsun, an Ohlone or Costanoan language formerly spoken near San Juan Bautista, California, whose last known fluent speaker Ascensi\'on Sol\'orsano passed away in 1930. However, in the late 90s, the Mutsun people (recognised formally as the Amah Mutsun Tribal Band)  began a revitalisation project using the extensive documentation left behind by linguists, anthropologists, and a Catholic mission priest, and now there are several conversational (albeit no fluent) speakers \citep{warner2007ethics}.
+\emph{Dormant} or \textit{sleeping} languages are a stage beyond moribund languages. They have no living fluent speakers. This does not mean that the language is extinct. An example would be Mutsun, an Ohlone or Costanoan language formerly spoken near San Juan Bautista, California, whose last known fluent speaker Ascensi\'on Sol\'orsano passed away in 1930. However, in the late 90s, the Mutsun people (recognised formally as the Amah Mutsun Tribal Band) began a revitalisation project using the extensive documentation left behind by linguists, anthropologists, and a Catholic mission priest, and now there are several conversational (albeit no fluent) speakers \citep{warner2007ethics}. Ethnologue defines dormant as a language which has no speakers, but there is still a community that attaches its ethnic identity to the language \citep{lewis2010assessing}.
 
 Often, dormant languages only come to attention when they are considered a \textit{revitalised} language. As \citet{warner2007ethics} notes, "Daryl Baldwin did indeed teach himself his then-dormant ancestral language, Myaamia, and is now raising his children largely in the language \citep{hinton2001sleeping, leonard2004acquisition}." Before Baldwin's work, Myaamia would have been considered a dormant language. Another example would be Manx, which lost all of its native speakers (the last being Ned Maddrell, who died in 1974 \citep{wilson2008revitalization}), but retained a score of second language speakers until today, when there are now immersion programs for children and over a thousand speakers of the language \citep{clague2009manx}. Between 1974 and a vague point somewhere in the past couple of decades where a child could consider Manx as their first language, the language was dormant; now, however, it is revitalised.
 
@@ -60,7 +60,7 @@ In the context of low resource languages, the majority of established work revol
 
 While hypothetically some languages could be defined as having no resources, there is no commonly used term such as 'resourceless'. In general, languages without writing systems fit in this category, and while it would potentially be interesting to train resources on audio-only vocabulary, this is generally not done computationally, but intensively by field linguists using specific tools such as dictionary applications or audio/video applications such as Praat \citep{boersma2009praat}, which allows you to view the waveforms for spoken corpora and annotate it. These resources - annotated (or not) corpora made by field linguists for a language - are, along with word lists and basic dictionaries, often the first resources for a given language, and are often not published but are accessibly only through corresponding with the linguist or team doing the work. A comparison with multimillion dollar projects such as Google Translate makes it clear that these languages would be considered under resourced.
 
-Another couple of terms often used in this general context are \textit{incident} or \textit{surprise} languages. The latter is generally used for challenges, and was first used to describe the US Defense Advanced Research Projects Agency (DARPA) "Surprise Language Challenge", run by their Translingual Information Detection Extraction and Summarization (TIDES) program in 2003. The challengee's goal was to see if a teams working on new languages they hadn't seen before (hence, 'surprise') could develop sufficiently useful resources and machine translation systems within a constrained period of time. \citep{oard2003surprise} These sorts of challenges aren't limited to DARPA; for instance, there was a Workshop on statistical Machine Translation held  at  EMNLP  2011 \citep{callison2011findings}. This workshop focused on a few tasks, one of which was based on the successful efforts by the Microsoft Translation team in 2010 to build a machine translation system for Haitian Creole that used SMS messages, after an earthquake there precipitated the need for a translation system between aid workers and spekaers of Haitian Creole, previously a low resource language \citep{lewis2010haitian, lewis2011crisis}. Haitian Creole, here, would be an \textit{incident} language.
+Another couple of terms often used in this general context are \textit{incident} or \textit{surprise} languages. The latter is generally used for challenges, and was first used to describe the US Defense Advanced Research Projects Agency (DARPA) "Surprise Language Challenge", run by their Translingual Information Detection Extraction and Summarization (TIDES) program in 2003. The challengee's goal was to see if a teams working on new languages they hadn't seen before (hence, 'surprise') could develop sufficiently useful resources and machine translation systems within a constrained period of time. \citep{oard2003surprise} These sorts of challenges aren't limited to DARPA; for instance, there was a Workshop on statistical Machine Translation held at EMNLP 2011 \citep{callison2011findings}. This workshop focused on a few tasks, one of which was based on the successful efforts by the Microsoft Translation team in 2010 to build a machine translation system for Haitian Creole that used SMS messages, after an earthquake there precipitated the need for a translation system between aid workers and spekaers of Haitian Creole, previously a low resource language \citep{lewis2010haitian, lewis2011crisis}. Haitian Creole, here, would be an \textit{incident} language.
 
 \subsubsection{Computer languages}
 
@@ -71,19 +71,84 @@ Other terms used in exploring the theory of language, semiotics, or formal langu
 \subsection{Metrics}
 \label{subsec:metrics}
 
-There are various metrics would can be used to assess language health. In this section, I'll explain these metrics in detail, focusing on the UNESCO, GIDS, EGIDS, and LEI measurements, as suggested by \citet{yang2017toward}.
+Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
+
+It is perhaps unsurprising that there are various metrics which can be used to classify the health of a language and its community. In this section, I'll explain these metrics in detail, focusing on the GIDS, EGIDS, UNESCO, and LEI measurements, as suggested by \citet{yang2017toward} as the main players in the field.
+
+\subsubsection{GIDS}
+
+The Graded Intergenerational Disruption Scale, developed by \citet{fishman1991reversing}, is the earliest and most well known of the scales. It rates languages based on their domains of use, and on the amount of passing on and education which continues to the next generation through the parents. Figure~\ref{fig:gids} summarizes the different stages. Generally, as a language progresses and becomes more imperilled, it ends up further down the list. As a language ceases to be used in one domain, it becomes less likely that it will in the future, and more likely that parents will consider the language to be less useful than another. Over time, this causes the language to lose speakers (although the process is not inevitable; for examples, language policy in Quebec helped secure and revitalise the language over the past half century \citep{bourhis2001reversing}).
+
+\begin{figure}
+ \centering
+ \includegraphics[width=.8\textwidth]{img/gids.png}
+ \caption{A summary of GIDS from \citep{lewis2010assessing}}
+ \label{fig:gids}
+\end{figure}
+
+\subsubsection{UNESCO}
+\label{subsec:unesco}
+
+The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, , anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
+
+In their publication from that conference, \citep{brenzinger2003language} lay out nine different metrics for measuring language vitality: six evaluate the vitality and state of endangerment, two language attitudes, and one related to urgency of documentation. The UNESCO system is rigorous in its refusal to apply a single score to a language, as that would smooth over the complexities of language usage. The six factors for vitality are: intergenerational language transmission (as with GIDS), absolute number of speakers, proportion of speakers within the total population, trends in existing language domains, response to new domains and media, and materials for language education and literacy.
+
+For each of these, they further break rating down into categories. For instance, when regarding intergenerational language transmission, they specify six different possible ratings - safe, unsafe, definitively endangered, severely endangered, critically endangered, and extinct - and equate each rating with a score from 5 to 0. Here one of the primary issues with the UNESCO rating can be seen  (as pointed out by \citet{lewis2010assessing}) - namely, that 'safe' is an incredibly large category that needs more fine-grained categories, as it would account for any GIDS-rated language above Level 6.
+
+The three other factors they consider are: governmental and institutional language attitudes and policies including official status and use; community members' attitudes toward their own language; and the amount and quality of documentation. Each of these is also rated on a null to five scale. For documentation, only a superlative rating of five would be considered to be more than low-resourced, as a four rating would be given to a language where "There are one good grammar and a number of adequate grammars, dictionaries, texts, literature, and occasionally updated everyday media; adequate annotated high-quality audio and video recordings." Although useful for linguists wishing to work in the language, this may not be enough for useful analysis and use by computational linguists. %TODO Should there be a section about linguists vs computational resources?
+
+In Figure~\ref{fig:unesco}, an example rating using this system, from the appendix of \citet{brenzinger2003language} itself, is included to get some grasp of how these grades work in parallel.
+
+Importantly, UNESCO clarifies that it does not suggest using one metric over another, and that adding up the numbers in the scales - however easy that might seem, as all of the measurements except speaking population are scalar and hold the same number of levels - would be insufficient and not ideal. "\textbf{Languages cannot be assessed simply by adding the numbers
+}; we therefore suggest such simple addition \textit{not be done} [sic]."
+
+\begin{figure}
+ \centering
+ \includegraphics[width=.5\textwidth]{img/unesco.png}
+ \caption{The UNESCO grading for three languages \citep{brenzinger2003language}}
+ \label{fig:unesco}
+\end{figure}
+
+The UNESCO rating is mostly used in the \textit{UNESCO Atlas of the World?s Languages in Danger} \citep{unesco2014unesco}.
+
+\subsubsection{EGIDS}
+
+\citet{lewis2010assessing}, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
+
+\begin{figure}
+ \centering
+ \includegraphics[width=1\textwidth]{img/egids.png}
+ \caption{A summary of EGIDS from \citep{lewis2010assessing}}
+ \label{fig:egids}
+\end{figure}
+
+EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{fig:egids} shows the main categories, taken from \citet{lewis2010assessing}, as well as the corresponding UNESCO ratings. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
+
+\citet{lewis2010assessing} also add another set of EGID levels which can be used to rate a language which is ascending in domains due to revitalisation efforts, which Figure~\ref{fig:egids-up} shows. This is generally useful, although it does suggest that a language uniformly descends or ascends, which may not be the case. The authors also spend time describing how to identify a language and decide which level best describes it.
+
+\begin{figure}
+ \centering
+ \includegraphics[width=1\textwidth]{img/egids-up.png}
+ \caption{A summary of EGIDS ascending levels from \citep{lewis2010assessing}}
+ \label{fig:egids-up}
+\end{figure}
+
+They end with a quote from \citet{fishman2001can}, which explains further the purpose of EGIDS:
+
+\begin{quote}
+Thus, any theory and practice of assistance to threatened languages-whether the threat be a threat to their very lives, on the one hand, or a much less serious functional threat, on  the  other  hand-must  begin  with  a  model  of  the  functional  diversification  of languages. If analysts can appropriately identify the functions that are endangered as a result of the impact of stronger languages and cultures on weaker ones, then it may become easier to recommend which therapeutic steps must be undertaken in order to counteract any injurious impact that occurs. The purpose of our analyses must be to understand, limit and rectify the societal loss of functionality in the weaker language when  two  languages  interact  and  compete  for  the  same  functions within  the  same 
+ethnocultural  community  and  to  differentiate  between  life-threatening  and  non-life-threatening losses.
+\end{quote} 
+
+\subsubsection{LEI}
+
+The Language Endangerment Index
 
 % TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
 
 % Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
 
 % > A variety of metrics have been proposed for assessing a language?s degree of endangerment ? the UNESCO system (2003), the Graded Intergenerational Disruption Scale (GIDS; Fishman 1991), the Extended Graded Intergenerational Disruption Scale (E-GIDS; Lewis & Simons 2010), and the Language Endangerment Index (LEI; Lee & Van Way 2016), among others. - yang_ogrady.pdf
-
-% Describe UNESCO
-% Describe GIDS
-% Describe EGIDS
-% Describe LEI
-
 
 \subsection{Digital presence}
 
