--- a/references.bib
+++ b/references.bib
@@ -1,292 +1,427 @@
 @inproceedings{scannell2007crubadan,
-  title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
-  author={Scannell, Kevin P},
-  year={2007}
+ title={The Cr{\'u}bad{\'a}n Project: Corpus building for under-resourced languages},
+ author={Scannell, Kevin P},
+ year={2007}
 }
 
 @article{benet2014ipfs,
-  title={{IPFS}-content addressed, versioned, p2p file system},
-  author={Benet, Juan},
-  journal={arXiv preprint arXiv:1407.3561},
-  year={2014}
+ title={{IPFS}-content addressed, versioned, p2p file system},
+ author={Benet, Juan},
+ journal={arXiv preprint arXiv:1407.3561},
+ year={2014}
 }
 
+@book{fishman1991reversing,
+  title={Reversing language shift: Theoretical and empirical foundations of assistance to threatened languages},
+  author={Fishman, Joshua A},
+  volume={76},
+  year={1991},
+  publisher={Multilingual matters}
+}
+
+@misc{unesco2014unesco,
+  title={UNESCO Atlas of the World’s Languages in Danger},
+  author={UNESCO, Atlas},
+  year={2014},
+  publisher={See http://www. unesco. org/culture/languages-atlas/(accessed 19 October 2014)}
+}
+
+@book{lewis2009ethnologue,
+  title={Ethnologue: Languages of the world},
+  author={Lewis, M Paul and Simons, Gary F and Fennig, Charles D and others},
+  volume={16},
+  year={2009},
+  publisher={SIL international Dallas, TX}
+}
+
+@article{bourhis2001reversing,
+  title={Reversing language shift in Quebec},
+  author={Bourhis, Richard Y},
+  journal={MULTILINGUAL MATTERS},
+  pages={101--141},
+  year={2001},
+  publisher={MULTILINGUAL MATTERS LTD}
+}
+
+@article{lewis2010assessing,
+  title={Assessing endangerment: expanding Fishman’s GIDS},
+  author={Lewis, M Paul and Simons, Gary F},
+  journal={Revue roumaine de linguistique},
+  volume={55},
+  number={2},
+  pages={103--120},
+  year={2010},
+  publisher={SIL International Dallas, TX}
+}
+
+@book{fishman2001can,
+  title={Can threatened languages be saved?: Reversing language shift, revisited: A 21st century perspective},
+  author={Fishman, Joshua A},
+  volume={116},
+  year={2001},
+  publisher={Multilingual Matters}
+}
+
+
 @book{johnson2013language,
-  title={Language Policy},
-  author={Johnson, D},
-  year={2013},
-  publisher={Springer}
+ title={Language Policy},
+ author={Johnson, D},
+ year={2013},
+ publisher={Springer}
 }
 
 @inproceedings{lewis2010haitian,
-  title={Haitian Creole: How to Build and Ship an MT Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
-  author={Lewis, Will},
-  booktitle={14th Annual conference of the European Association for machine translation},
-  year={2010},
-  organization={Citeseer}
+ title={Haitian Creole: How to Build and Ship an MT Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
+ author={Lewis, Will},
+ booktitle={14th Annual conference of the European Association for machine translation},
+ year={2010},
+ organization={Citeseer}
+}
+
+@article{krauss2007keynote,
+ title={Keynote-mass language extinction and documentation: The race against time},
+ author={Krauss, Michael E},
+ journal={The vanishing languages of the Pacific rim},
+ pages={3--24},
+ year={2007},
+ publisher={Oxford University Press}
+}
+
+
+@article{brenzinger2003language,
+ title={Language vitality and endangerment},
+ author={Brenzinger, Matthias and Yamamoto, Akira and Aikawa, Noriko and Koundiouba, Dmitri and Minasyan, Anahit and Dwyer, Arienne and Grinevald, Colette and Krauss, Michael and Miyaoka, Osahito and Sakiyama, Osamu and others},
+ journal={Paris: UNESCO Intangible Cultural Unit, Safeguarding Endangered Languages. http://www. unesco. org/culture/ich/doc/src/00120-en. pdf. Last accessed July},
+ volume={1},
+ pages={2010},
+ year={2003}
 }
 
 @inproceedings{lewis2011crisis,
-  title={Crisis mt: Developing a cookbook for mt in crisis situations},
-  author={Lewis, William D and Munro, Robert and Vogel, Stephan},
-  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
-  pages={501--511},
-  year={2011},
-  organization={Association for Computational Linguistics}
+ title={Crisis mt: Developing a cookbook for mt in crisis situations},
+ author={Lewis, William D and Munro, Robert and Vogel, Stephan},
+ booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
+ pages={501--511},
+ year={2011},
+ organization={Association for Computational Linguistics}
 }
 
 
 @inproceedings{agic2015if,
-  title={If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages},
-  author={Agi{\'c}, {\v{Z}}eljko and Hovy, Dirk and S{\o}gaard, Anders},
-  booktitle={The 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference of the Asian Federation of Natural Language Processing (ACL-IJCNLP 2015)},
-  year={2015}
+ title={If all you have is a bit of the Bible: Learning POS taggers for truly low-resource languages},
+ author={Agi{\'c}, {\v{Z}}eljko and Hovy, Dirk and S{\o}gaard, Anders},
+ booktitle={The 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference of the Asian Federation of Natural Language Processing (ACL-IJCNLP 2015)},
+ year={2015}
 }
 
 @inproceedings{callison2011findings,
-  title={Findings of the 2011 workshop on statistical machine translation},
-  author={Callison-Burch, Chris and Koehn, Philipp and Monz, Christof and Zaidan, Omar F},
-  booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
-  pages={22--64},
-  year={2011},
-  organization={Association for Computational Linguistics}
+ title={Findings of the 2011 workshop on statistical machine translation},
+ author={Callison-Burch, Chris and Koehn, Philipp and Monz, Christof and Zaidan, Omar F},
+ booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
+ pages={22--64},
+ year={2011},
+ organization={Association for Computational Linguistics}
 }
 
 
 @article{oard2003surprise,
-  title={The surprise language exercises},
-  author={Oard, Douglas W},
-  journal={ACM Transactions on Asian Language Information Processing (TALIP)},
-  volume={2},
-  number={2},
-  pages={79--84},
-  year={2003},
-  publisher={ACM}
+ title={The surprise language exercises},
+ author={Oard, Douglas W},
+ journal={ACM Transactions on Asian Language Information Processing (TALIP)},
+ volume={2},
+ number={2},
+ pages={79--84},
+ year={2003},
+ publisher={ACM}
 }
 
 
 @misc{boersma2009praat,
-  title={Praat: doing phonetics by computer [Computer program]},
-  author={Boersma, Paul and Weenink, David},
-  year={2018}
+ title={Praat: doing phonetics by computer [Computer program]},
+ author={Boersma, Paul and Weenink, David},
+ year={2018}
 }
 
 
 @inproceedings{chew2006evaluation,
-  title={Evaluation of the bible as a resource for cross-language information retrieval},
-  author={Chew, Peter A and Verzi, Steve J and Bauer, Travis L and McClain, Jonathan T},
-  booktitle={Proceedings of the workshop on multilingual language resources and interoperability},
-  pages={68--74},
-  year={2006},
-  organization={Association for Computational Linguistics}
+ title={Evaluation of the bible as a resource for cross-language information retrieval},
+ author={Chew, Peter A and Verzi, Steve J and Bauer, Travis L and McClain, Jonathan T},
+ booktitle={Proceedings of the workshop on multilingual language resources and interoperability},
+ pages={68--74},
+ year={2006},
+ organization={Association for Computational Linguistics}
 }
 
 @article{hanks2017policy,
-  title={Policy Barriers to Ainu Language Revitalization in Japan: When Globalization Means English},
-  author={Hanks, David H},
-  journal={Working Papers in Educational Linguistics (WPEL)},
-  volume={32},
-  number={1},
-  pages={5},
-  year={2017}
+ title={Policy Barriers to Ainu Language Revitalization in Japan: When Globalization Means English},
+ author={Hanks, David H},
+ journal={Working Papers in Educational Linguistics (WPEL)},
+ volume={32},
+ number={1},
+ pages={5},
+ year={2017}
 }
 
 @book{okrent2009land,
-  title={In the land of invented languages: Esperanto rock stars, Klingon poets, Loglan lovers, and the mad dreamers who tried to build a perfect language},
-  author={Okrent, Arika},
-  year={2009},
-  publisher={Spiegel \& Grau}
+ title={In the land of invented languages: Esperanto rock stars, Klingon poets, Loglan lovers, and the mad dreamers who tried to build a perfect language},
+ author={Okrent, Arika},
+ year={2009},
+ publisher={Spiegel \& Grau}
 }
 
 
 @article{schreyer2011media,
-  title={Media, information technology, and language planning: what can endangered language communities learn from created language communities?},
-  author={Schreyer, Christine},
-  journal={Current Issues in Language Planning},
-  volume={12},
-  number={3},
-  pages={403--425},
-  year={2011},
-  publisher={Taylor \& Francis}
+ title={Media, information technology, and language planning: what can endangered language communities learn from created language communities?},
+ author={Schreyer, Christine},
+ journal={Current Issues in Language Planning},
+ volume={12},
+ number={3},
+ pages={403--425},
+ year={2011},
+ publisher={Taylor \& Francis}
 }
 
 @article{schreyer2015digital,
-  title={The digital fandom of Na'vi speakers.},
-  author={Schreyer, Christine},
-  journal={Transformative Works \& Cultures},
-  volume={18},
-  year={2015}
+ title={The digital fandom of Na'vi speakers.},
+ author={Schreyer, Christine},
+ journal={Transformative Works \& Cultures},
+ volume={18},
+ year={2015}
 }
 
 @article{scott2010language,
-  title={Language evolution in the laboratory},
-  author={Scott-Phillips, Thomas C and Kirby, Simon},
-  journal={Trends in cognitive sciences},
-  volume={14},
-  number={9},
-  pages={411--417},
-  year={2010},
-  publisher={Elsevier}
+ title={Language evolution in the laboratory},
+ author={Scott-Phillips, Thomas C and Kirby, Simon},
+ journal={Trends in cognitive sciences},
+ volume={14},
+ number={9},
+ pages={411--417},
+ year={2010},
+ publisher={Elsevier}
 }
 
 @article{ratner2000beginning,
-  title={In the beginning was the wug: Forty years of language elicitation studies},
-  author={Ratner, Nan Bernstein and Menn, Lise},
-  journal={Methods for studying language production},
-  pages={11--26},
-  year={2000},
-  publisher={Lawrence Erlbaum Associates Mahwah}
+ title={In the beginning was the wug: Forty years of language elicitation studies},
+ author={Ratner, Nan Bernstein and Menn, Lise},
+ journal={Methods for studying language production},
+ pages={11--26},
+ year={2000},
+ publisher={Lawrence Erlbaum Associates Mahwah}
 }
 
 
 @book{snyder2004practice,
-  title={The Practice of the Wild: Essays},
-  author={Snyder, G.},
-  isbn={9781593760168},
-  lccn={2003019878},
-  url={https://books.google.ca/books?id=Q-Gtg8S529AC},
-  year={2004},
-  publisher={Shoemaker \& Hoard}
+ title={The Practice of the Wild: Essays},
+ author={Snyder, G.},
+ isbn={9781593760168},
+ lccn={2003019878},
+ url={https://books.google.ca/books?id=Q-Gtg8S529AC},
+ year={2004},
+ publisher={Shoemaker \& Hoard}
 }
 
 
 @article{gilRiau,
-  title={What is {Riau} {Indonesian}?},
-  author={Gil, David},
-  journal={Studies in Malay and Indonesian Linguistics},
-  year={2009}
+ title={What is {Riau} {Indonesian}?},
+ author={Gil, David},
+ journal={Studies in Malay and Indonesian Linguistics},
+ year={2009}
 }
 
 @article{warner2007ethics,
-  title={Ethics and revitalization of dormant languages: The Mutsun language},
-  author={Warner, Natasha and Luna, Quirina and Butler, Lynnika},
-  journal={Language Documentation \& Conservation},
-  volume={1},
-  number={1},
-  pages={1--1},
-  year={2007},
-  publisher={Directory of Open Access Journals}
+ title={Ethics and revitalization of dormant languages: The Mutsun language},
+ author={Warner, Natasha and Luna, Quirina and Butler, Lynnika},
+ journal={Language Documentation \& Conservation},
+ volume={1},
+ number={1},
+ pages={1--1},
+ year={2007},
+ publisher={Directory of Open Access Journals}
 }
 
 @article{clague2009manx,
-  title={Manx language revitalization and immersion education},
-  author={Clague, Marie and others},
-  journal={E-Keltoi: Journal of Interdisciplinary Celtic Studies},
-  volume={2},
-  pages={165--198},
-  year={2009}
+ title={Manx language revitalization and immersion education},
+ author={Clague, Marie and others},
+ journal={E-Keltoi: Journal of Interdisciplinary Celtic Studies},
+ volume={2},
+ pages={165--198},
+ year={2009}
 }
 
 @inproceedings{wilson2008revitalization,
-  title={The revitalization of the Manx language and culture in an era of global change},
-  author={Wilson, Gary N},
-  booktitle={Proceedings of the Third International Small Island Cultures Conference},
-  pages={74--81},
-  year={2008},
-  organization={Small Islands Cultures Research Initiative Sydney}
+ title={The revitalization of the Manx language and culture in an era of global change},
+ author={Wilson, Gary N},
+ booktitle={Proceedings of the Third International Small Island Cultures Conference},
+ pages={74--81},
+ year={2008},
+ organization={Small Islands Cultures Research Initiative Sydney}
 }
 
 @book{kroeber1973ishi,
-  title={Ishi: Last of His Tribe},
-  author={Kroeber, T. and Robbins, R.},
-  isbn={9780808588153},
-  url={https://books.google.ca/books?id=hO9mAAAACAAJ},
-  year={1973},
-  publisher={Turtleback Books}
+ title={Ishi: Last of His Tribe},
+ author={Kroeber, T. and Robbins, R.},
+ isbn={9780808588153},
+ url={https://books.google.ca/books?id=hO9mAAAACAAJ},
+ year={1973},
+ publisher={Turtleback Books}
 }
 
 @article{hinton2001sleeping,
-  title={Sleeping languages: Can they be awakened},
-  author={Hinton, Leanne},
-  journal={The green book of language revitalization in practice},
-  pages={413--417},
-  year={2001},
-  publisher={Academic Press San Diego, CA}
+ title={Sleeping languages: Can they be awakened},
+ author={Hinton, Leanne},
+ journal={The green book of language revitalization in practice},
+ pages={413--417},
+ year={2001},
+ publisher={Academic Press San Diego, CA}
 }
 
 @inproceedings{leonard2004acquisition,
-  title={The acquisition of Miami: Findings from a field study},
-  author={Leonard, Wesley},
-  booktitle={36th Annual Algonquian Conference, Madison, WI},
-  year={2004}
+ title={The acquisition of Miami: Findings from a field study},
+ author={Leonard, Wesley},
+ booktitle={36th Annual Algonquian Conference, Madison, WI},
+ year={2004}
 }
 
 @inproceedings{CCURL,
-	Author    = {Littauer, Richard and Paterson III, Hugh},
-	Title     = {Open Source Code Serving Endangered Languages},
+	Author  = {Littauer, Richard and Paterson III, Hugh},
+	Title   = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
-  Address   = {Portoro\v{z}, Slovenia},
-	Year      = {2016}
+ Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+ Address  = {Portoro\v{z}, Slovenia},
+	Year   = {2016}
 }
 
 @article{bernard1992preserving,
-  title={Preserving language diversity},
-  author={Bernard, H},
-  journal={Human organization},
-  volume={51},
-  number={1},
-  pages={82--89},
-  year={1992},
-  publisher={Society for Applied Anthropology}
+ title={Preserving language diversity},
+ author={Bernard, H},
+ journal={Human organization},
+ volume={51},
+ number={1},
+ pages={82--89},
+ year={1992},
+ publisher={Society for Applied Anthropology}
 }
 
+@article{maffi2004world,
+ title={The World's Languages in Crisis: Questions, Challenges, and a Call for Action},
+ author={Maffi, L and Yamamoto, A},
+ journal={Lectures on Endangered Languages},
+ volume={4},
+ pages={23--27},
+ year={2004}
+}
+
+@incollection{maffi2001,
+ title={The World Languages in Crisis: Questions, Challenges, and a Call for
+ Action},
+ author={Maffi, Luisa and Krauss, Michael and Yamamoto, Akira},
+ year={2001},
+ booktitle={Conference Handbook on Endangered languages of the Pacific Rim},
+ pages={75-78},
+ location={Osaka},
+ published={Endangered Languages of the Pacific Rim Project},
+ journal={2nd International Conference on Endangered Languages of the Pacific Rim, Kyoto, Japan.},
+ date={November 30 – December 2, 2001}
+}
 
 @article{krauss92,
-  title={The world's languages in crisis},
-  author={Krauss, Michael},
-  journal={Language},
-  volume={68},
-  number={1},
-  pages={4--10},
-  year={1992}
+ title={The world's languages in crisis},
+ author={Krauss, Michael},
+ journal={Language},
+ volume={68},
+ number={1},
+ pages={4--10},
+ year={1992}
 }
+
+@article{anderson2006language,
+ title={Language hotspots: linking language extinction, biodiversity, \& human knowledge base},
+ author={Anderson, Gregory DS and Harrison, K David},
+ journal={Living Tongues Institute for Endangered Languages Occasional Papers},
+ year={2006}
+}
+
+@book{nettle2000vanishing,
+ title={Vanishing voices: The extinction of the world's languages},
+ author={Nettle, Daniel and Romaine, Suzanne},
+ year={2000},
+ publisher={Oxford University Press on Demand}
+}
+
+@book{maffi2001biocultural,
+ title={On biocultural diversity: Linking language, knowledge, and the environment},
+ author={Maffi, Luisa},
+ year={2001},
+ publisher={Smithsonian Inst Pr}
+}
+
+@article{gorenflo2012co,
+ title={Co-occurrence of linguistic and biological diversity in biodiversity hotspots and high biodiversity wilderness areas},
+ author={Gorenflo, Larry J and Romaine, Suzanne and Mittermeier, Russell A and Walker-Painemilla, Kristen},
+ journal={Proceedings of the National Academy of Sciences},
+ volume={109},
+ number={21},
+ pages={8032--8037},
+ year={2012},
+ publisher={National Acad Sciences}
+}
+
+@article{simons2013world,
+ title={The world’s languages in crisis},
+ author={Simons, Gary F and Lewis, MPaul},
+ journal={Responses to language endangerment: In honor of Mickey Noonan. New directions in language documentation and language revitalization},
+ volume={3},
+ pages={20},
+ year={2013},
+ publisher={John Benjamins Amsterdam, The Netherlands}
+}
+
 
 
 @incollection{chiarcos2013building,
-  title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
-  author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo and Nordhoff, Sebastian and Littauer, Richard},
-  booktitle={The People's Web Meets NLP},
-  pages={315--348},
-  year={2013},
-  publisher={Springer}
+ title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
+ author={Chiarcos, Christian and Moran, Steven and Mendes, Pablo and Nordhoff, Sebastian and Littauer, Richard},
+ booktitle={The People's Web Meets NLP},
+ pages={315--348},
+ year={2013},
+ publisher={Springer}
 }
 
 @inproceedings{chiarcos2012open,
-  title={The Open Linguistics Working Group.},
-  author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
-  booktitle={LREC},
-  pages={3603--3610},
-  year={2012}
+ title={The Open Linguistics Working Group.},
+ author={Chiarcos, Christian and Hellmann, Sebastian and Nordhoff, Sebastian and Moran, Steven and Littauer, Richard and Eckle-Kohler, Judith and Gurevych, Iryna and Hartmann, Silvana and Matuschek, Michael and Meyer, Christian M},
+ booktitle={LREC},
+ pages={3603--3610},
+ year={2012}
 }
 
 @inproceedings{bird2006nltk,
-  title={{NLTK}: the natural language toolkit},
-  author={Bird, Steven},
-  booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
-  pages={69--72},
-  year={2006},
-  organization={Association for Computational Linguistics}
+ title={{NLTK}: the natural language toolkit},
+ author={Bird, Steven},
+ booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
+ pages={69--72},
+ year={2006},
+ organization={Association for Computational Linguistics}
 }
 
 // Note: Adding a {} around an word in a title will enforce its capitalization
 
 @article{yang2017toward,
-  title={Toward a linguistically realistic assessment of language vitality: The case of {Jejueo}},
-  author={Yang, Changyong and O'Grady, William and Yang, Sejung},
-  year={2017},
-  journal={Language Documentation and Conservation},
-  volumte={11},
-  pages={103-113},
-  publisher={University of Hawaii Press}
+ title={Toward a linguistically realistic assessment of language vitality: The case of {Jejueo}},
+ author={Yang, Changyong and O'Grady, William and Yang, Sejung},
+ year={2017},
+ journal={Language Documentation and Conservation},
+ volumte={11},
+ pages={103-113},
+ publisher={University of Hawaii Press}
 }
 
 @article{krauwer2003basic,
-  title={The basic language resource kit ({BLARK}) as the first milestone for the language resources roadmap},
-  author={Krauwer, Steven},
-  journal={Proceedings of SPECOM 2003},
-  pages={8--15},
-  year={2003}
+ title={The basic language resource kit ({BLARK}) as the first milestone for the language resources roadmap},
+ author={Krauwer, Steven},
+ journal={Proceedings of SPECOM 2003},
+ pages={8--15},
+ year={2003}
 }
 
 @inproceedings{Lewis:2011:CMD:2132960.2133030,
@@ -306,45 +441,45 @@
 }
 
 @incollection{grenoble_2011,
-  address   = {Cambridge},
-  author    = {Lenore A. Grenoble},
-  booktitle = {The Cambridge Handbook of Endangered Languages},
-  editor    = {Peter K. Austin and Julia Sallabank},
-  pages     = {27-45},
-  publisher = {Cambridge University Press},
-  title     = {Language Ecology and Endangerment},
-  year      = {2011}
+ address  = {Cambridge},
+ author  = {Lenore A. Grenoble},
+ booktitle = {The Cambridge Handbook of Endangered Languages},
+ editor  = {Peter K. Austin and Julia Sallabank},
+ pages   = {27-45},
+ publisher = {Cambridge University Press},
+ title   = {Language Ecology and Endangerment},
+ year   = {2011}
 }
 
 @inbook{wals-141,
-  address   = {Leipzig},
-  author    = {Bernard Comrie},
-  booktitle = {The World Atlas of Language Structures Online},
-  editor    = {Matthew S. Dryer and Martin Haspelmath},
-  publisher = {Max Planck Institute for Evolutionary Anthropology},
-  title     = {Writing Systems},
-  url       = {http://wals.info/chapter/141},
-  year      = {2013}
+ address  = {Leipzig},
+ author  = {Bernard Comrie},
+ booktitle = {The World Atlas of Language Structures Online},
+ editor  = {Matthew S. Dryer and Martin Haspelmath},
+ publisher = {Max Planck Institute for Evolutionary Anthropology},
+ title   = {Writing Systems},
+ url    = {http://wals.info/chapter/141},
+ year   = {2013}
 }
 
 @article{kornai2013digital,
-  title={Digital language death},
-  author={Kornai, Andr{\'a}s},
-  journal={PloS one},
-  volume={8},
-  number={10},
-  pages={e77056},
-  year={2013},
-  publisher={Public Library of Science}
+ title={Digital language death},
+ author={Kornai, Andr{\'a}s},
+ journal={PloS one},
+ volume={8},
+ number={10},
+ pages={e77056},
+ year={2013},
+ publisher={Public Library of Science}
 }
 
 @inproceedings{zagalsky2015,
-  title={The emergence of {GitHub} as a collaborative platform for education},
-  author={Zagalsky, Alexey and Feliciano, Joseph and Storey, Margaret-Anne and Zhao, Yiyun and Wang, Weiliang},
-  booktitle={Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work \& Social Computing},
-  pages={1906--1917},
-  year={2015},
-  organization={ACM}
+ title={The emergence of {GitHub} as a collaborative platform for education},
+ author={Zagalsky, Alexey and Feliciano, Joseph and Storey, Margaret-Anne and Zhao, Yiyun and Wang, Weiliang},
+ booktitle={Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work \& Social Computing},
+ pages={1906--1917},
+ year={2015},
+ organization={ACM}
 }
 
 @inproceedings{storey2014,
@@ -366,40 +501,40 @@
 }
 
 @book{MacKenzie-and-Jancewicz-1994,
-  address    = {Kawawachikamach, Quebec},
-  author     = {MacKenzie, Marguerite and Jancewicz, Bill},
-  publisher  = {Naskapi Development Corporation},
-  title      = {Naskapi Lexicon},
-  year       = {1994},
-  iso_code   = {nsk},
-  olac_field = {syntax; general_linguistics; typology},
-  wals_code  = {nsk}
+ address  = {Kawawachikamach, Quebec},
+ author   = {MacKenzie, Marguerite and Jancewicz, Bill},
+ publisher = {Naskapi Development Corporation},
+ title   = {Naskapi Lexicon},
+ year    = {1994},
+ iso_code  = {nsk},
+ olac_field = {syntax; general_linguistics; typology},
+ wals_code = {nsk}
 }
 
 @book{MacKenzie-1980,
-  title={Towards a Dialectology of {Cree-Montagnais-Naskapi}},
-  author={MacKenzie, M.E.},
-  publisher={University of Toronto},
-  url={https://books.google.ca/books?id=u\_MBPwAACAAJ},
-  year={1980}
+ title={Towards a Dialectology of {Cree-Montagnais-Naskapi}},
+ author={MacKenzie, M.E.},
+ publisher={University of Toronto},
+ url={https://books.google.ca/books?id=u\_MBPwAACAAJ},
+ year={1980}
 }
 
 @book{llewellyn2017oral,
-  title={Oral History and Education: Theories, Dilemmas, and Practices},
-  author={Llewellyn, K.R. and Ng-A-Fook, N.},
-  isbn={9781349950195},
-  lccn={2017935967},
-  series={Palgrave Studies in Oral History},
-  url={https://books.google.ca/books?id=SGuYDgAAQBAJ},
-  year={2017},
-  publisher={Palgrave Macmillan US}
+ title={Oral History and Education: Theories, Dilemmas, and Practices},
+ author={Llewellyn, K.R. and Ng-A-Fook, N.},
+ isbn={9781349950195},
+ lccn={2017935967},
+ series={Palgrave Studies in Oral History},
+ url={https://books.google.ca/books?id=SGuYDgAAQBAJ},
+ year={2017},
+ publisher={Palgrave Macmillan US}
 }
 
 @book{naskapi-new-testament,
-  title={Naskapi New Testament},
-  author="{Naskapi Development Corporation}",
-  year={2007},
-  isbn={978-0-88843-557-8},
-  url={http://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
-  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
+ title={Naskapi New Testament},
+ author="{Naskapi Development Corporation}",
+ year={2007},
+ isbn={978-0-88843-557-8},
+ url={http://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
+ publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
