--- a/thesis.tex
+++ b/thesis.tex
@@ -17,7 +17,7 @@
 
 		% Upper part of the page. The '~' is needed because \\
 		% only works if a paragraph has started.
-		\includegraphics[width=0.25\textwidth]{eule.png}~\\[1cm]
+		\includegraphics[width=0.25\textwidth]{img/eule.png}~\\[1cm]
 
 		\textsc{\LARGE Saarland  University}\\[0.4cm]
 		\textsc{\Large Department of Computational Linguistics}\\[1.5cm]
@@ -66,7 +66,7 @@
 
 \newpage
 
-%%% Eidesstattliche Erklärung
+%%% Eidesstattliche Erklï¿½rung
 \thispagestyle{empty}
 \noindent\textbf{Eidesstattliche Erkl\"arung}
 
@@ -88,7 +88,7 @@
 
 \noindent Richard Littauer
 
-%%% Eidesstattliche Erklärung End
+%%% Eidesstattliche Erklï¿½rung End
 
 \newpage
 %
@@ -149,7 +149,7 @@
 % % \input{composition}
 % % \input{discussion}
 % % \input{conclusion}
-	
+
 % Used by Jonathan, may not be needed
 % \newpage
 % \appendix
